fix item borders, redo footer spacing

--- a/src/components/timeline/Timeline.css
+++ b/src/components/timeline/Timeline.css
@@ -142,12 +142,12 @@ input[type="button"] {
 }
 
 .vis-item[data-id] {
-  border: 1px solid;
-  border-color: #ffffff;
-  background-color: rgb(0, 0, 0);
-  font-size: 10pt;
-  color: rgb(255, 255, 255);
-  border-radius: 0;
+border: 1px solid !important;
+  border-color: #ffffff!important;
+  background-color: rgb(0, 0, 0)!important;
+  font-size: 10pt!important;
+  color: rgb(255, 255, 255)!important;
+  border-radius: 0!important;
 }
 
 .vis-cluster {
@@ -186,7 +186,7 @@ border: 1px solid !important;
 
 .vis-box.hovered,
 .vis-dot.hovered {
-  border-color: aqua;
+  border-color: aqua!important;
   box-shadow: 0px 0px 10px 5px rgba(0, 255, 255, 0.45);
   cursor: pointer;
   transition: none;
